.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Address__c.object
<CustomObject>
    <description>Deprecated</description>
    <fields>
        <fullName>xcdhcm__Address_Type__c</fullName>
        <label>Address type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current Home Address</fullName>
                    <default>true</default>
                    <label>Current Home Address</label>
                </value>
                <value>
                    <fullName>Previous Home Address</fullName>
                </value>
                <value>
                    <fullName>Expat Address</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Check_for_Unique__c</fullName>
        <label>Check for Unique</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>xcdhcm__City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_Address_Type__c</fullName>
        <formula>IF(ISPICKVAL(xcdhcm__Address_Type__c, &apos;Current Home Address&apos;) , xcdhcm__Employee_Details__r.Name&amp;Text(xcdhcm__Address_Type__c),
xcdhcm__Employee_Details__r.Name&amp;Text(xcdhcm__Address_Type__c)&amp; Text( CreatedDate ) )</formula>
        <label>Employee Address Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_Details__c</fullName>
        <label>Employee details</label>
        <referenceTo>xcdhcm__Employee_Detail__c</referenceTo>
        <relationshipName>Address</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>xcdhcm__From_Date__c</fullName>
        <label>From date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__State_Province__c</fullName>
        <label>State/province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__To_Date__c</fullName>
        <description>The date the employee left this address</description>
        <inlineHelpText>Please enter the date the employee left this address.  NOTE if this is a current address then leave this value blank.</inlineHelpText>
        <label>To date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Zip_Postal_Code__c</fullName>
        <label>Zip/postcode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>xAddress</label>
    <nameField>
        <displayFormat>ADRS-{0000}</displayFormat>
        <label>Address</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>xAddresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>